<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cadastros"
    tools:context=".activities.ControlesActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:subtitleTextColor="@color/colorBranco"
            android:titleTextColor="@color/colorBranco" />
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" -->


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_temperature"
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tempTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTemp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tempUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTempUpdate"
                        android:textAlignment="center"
                        android:textColor="@color/colorButtonPressed"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tempCurrent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:text="@string/lblTempCurrent"
                        android:textAlignment="center"
                        android:textColor="@color/colorPreto"
                        android:textSize="40sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardIluminacao"
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/iluminaTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblLightControl"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <Switch
                        android:id="@+id/simpleSwitch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:checked="false"
                        android:gravity="left"
                        android:textColorHint="@color/lite_blue"
                        android:text="@string/lblLamp1"
                        android:textOff="OFF"
                        android:textOn="ON" />

                    <Switch
                        android:id="@+id/simpleSwitch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:gravity="left"
                        android:text="@string/lblLamp2"
                        android:textOff="OFF"
                        android:textOn="ON" />

                    <Switch
                        android:id="@+id/simpleSwitch3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:gravity="left"
                        android:text="@string/lblLamp3"
                        android:textOff="OFF"
                        android:textOn="ON" />

                    <ToggleButton
                        android:id="@+id/btnLigaControles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/btn_acesso_vd"
                        android:text="ToggleButton"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBranco"
                        android:textOff="@string/lblLightStatusOff"
                        android:textOn="@string/lblLightStatusOn" />

                    <Button
                        android:id="@+id/checkLamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_acesso_vd"
                        android:padding="10dp"
                        android:text="@string/lblStatusCheck"
                        android:textSize="18dp"
                        android:textColor="@color/colorBranco"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
