<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/logotipo_secundario" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appSubName"
            android:id="@+id/subTitlulo_app"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEntradaEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEmail"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEntradaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblPassword"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_acesso"
            android:text="@string/btnLogin"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton" />

        <RelativeLayout
            android:id="@+id/txtLayoutRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtMensagemRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/txtMensagemRegistroSem"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtMensagemRegistroCliqueAqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/txtMensagemRegistro"
                android:layout_toRightOf="@+id/txtMensagemRegistro"
                android:text="@string/txtMensagemCliqueAqui"
                android:textColor="@color/colorButtonPressed"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
