<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:paddingBottom="8dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="8dp"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logotipo_principal" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appSubName"
            android:textColor="@color/colorText"
            android:textSize="23dp"
            android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnHomeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_acesso"
            android:text="@string/btnEntrar"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnHomeSobre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_acesso"
            android:text="@string/btnSobre"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnHomeSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_acesso"
            android:text="@string/btnSair"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>