<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity"
    android:background="@drawable/bg_home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msnBoasVindas"
        android:id="@+id/msnBoasVindas"
        android:textSize="25dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoSplash"
        android:background="@drawable/logotipo_principal"
        android:layout_below="@+id/msnBoasVindas"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appSubName"
        android:id="@+id/subTitlulo_app"
        android:textSize="22dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/logoSplash"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/subTitlulo_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblProgressBar"
        android:id="@+id/lblProgressBar"
        android:layout_below="@+id/progressBar"
        android:textSize="19dp"
        android:textStyle="italic"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
